--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -379,7 +379,15 @@ enable2ndByteCanID = false
 	crankingCycleBins	    = array,   F32,   9600,   [8],  "C",        1,     0,    -80.0,    170.0,  2; size 32
 	ignitionDwellForCrankingMs=scalar, F32,   9632,        "ms",        1,     0,    0, 200,     1;     size 4
 	
-	
+
+[Tuning]
+   spotDepth       =   2 ; 0 = no indicators, 1 = Z only, 2 = XYZ indicators.
+   cursorDepth     =   2 ; Same as spot depth.
+
+   gaugeColumns = 1 ; Only 1 or 2 are valid.
+
+   pageButtons  = "&EGO"
+   gauge1       = tachometer	
 
 [OutputChannels]
 
