refactoring & period error detection

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -118,10 +118,10 @@ enable2ndByteCanID = false
 	VBattDividerCoefficient	= scalar,  F32,    948,         "coef",    1,      0,    0.01,  20.0,        2 ; size 4
 	FanONTemperature	    = scalar,  F32,    952,         "°C",    1,      0,       0,  1000.0,        2 ; size 4
 	FanOffTemperature	    = scalar,  F32,    956,         "°C",    1,      0,       0,  1000.0,        2 ; size 4
-	CanReadEnabled		    = bits,    U32,    960, [0:0], "false", "true"
-	CanWriteEnabled		    = bits,    U32,    964, [0:0], "false", "true"
-;	CanNbcType              = bits,    U32,    968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
-	CanSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2 ; size 4
+	canReadEnabled		    = bits,    U32,    960, [0:0], "false", "true"
+	canWriteEnabled		    = bits,    U32,    964, [0:0], "false", "true"
+;	canNbcType              = bits,    U32,    968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
+	canSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2 ; size 4
 	nCylinders   		    = bits,    U32,    976, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
 	IgnitionMode		    = bits,    U32,    980, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
 	FiringOrder		        = bits,    U32,    984, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
@@ -922,10 +922,10 @@ fileVersion = { 20141103 }
 
 ;			Board->Connection
 	dialog = canBus, "CAN Bus"
-		field = "Can Read Enabled",						CanReadEnabled
-		field = "Can Write Enabled",					CanWriteEnabled
-;		field = "Can Nbc Type",							CanNbcType
-		field = "Can Sleep Period",						CanSleepPeriod
+		field = "Can Read Enabled",						canReadEnabled
+		field = "Can Write Enabled",					canWriteEnabled
+;		field = "Can Nbc Type",							canNbcType
+		field = "Can Sleep Period",						canSleepPeriod
 	
 	dialog = sdCard, "SD Card Logger"
 		field = "SdCard", 								isSdCardEnabled
