--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -389,6 +389,12 @@ enable2ndByteCanID = false
    pageButtons  = "&EGO"
    gauge1       = tachometer	
 
+
+[VeAnalyze]
+        ;    tableName,  lambdaTargetTableName, lambdaChannel, egoCorrectionChannel, activeCondition
+;        veAnalyzeMap = veTable1Tbl, afrTSCustom, afr1, egocor1, 1
+ ;lambdaTargetTables = afrTable1Tbl, afrTable2Tbl, afrTSCustom
+
 [OutputChannels]
 
 ; see TS_FILE_VERSION in firmware code
