making SPI more flexible

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -118,8 +118,6 @@ enable2ndByteCanID = false
 	VBattDividerCoefficient	= scalar,  F32,    948,         "coef",    1,      0,    0.01,  20.0,        2 ; size 4
 	FanONTemperature	    = scalar,  F32,    952,         "°C",    1,      0,       0,  1000.0,        2 ; size 4
 	FanOffTemperature	    = scalar,  F32,    956,         "°C",    1,      0,       0,  1000.0,        2 ; size 4
-	canReadEnabled		    = bits,    U32,    960, [0:0], "false", "true"
-	canWriteEnabled		    = bits,    U32,    964, [0:0], "false", "true"
 ;	canNbcType              = bits,    U32,    968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
 	canSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2 ; size 4
 	nCylinders   		    = bits,    U32,    976, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
@@ -354,7 +352,13 @@ enable2ndByteCanID = false
 	fsio_setting15          = scalar,  F32,   6188, 		"Val",	   1,	   0,       0, 18000,	  0 ; size 4
 
 	useConstantDwellDuringCranking= bits,    U32,   6280, [3:3], "false", "true"
-  ; hasCltSensor    6284
+	isCanEnabled            = bits,    U32,   6280, [5:5], "false", "true"
+	hasCltSensor            = bits,    U32,   6280, [6:6], "false", "true"
+	canReadEnabled          = bits,    U32,   6280, [7:7], "false", "true"
+	canWriteEnabled         = bits,    U32,   6280, [8:8], "false", "true"
+  ; hasCltSensor    
+  
+  ; unused 6284
   ; idleMode		6288
 
     isInjectionEnabled      = bits,    U32,   6292, [0:0], "false", "true"
@@ -398,7 +402,7 @@ enable2ndByteCanID = false
 [OutputChannels]
 
 ; see TS_FILE_VERSION in firmware code
-fileVersion = { 20141103 }
+fileVersion = { 20141225 }
 
    ochGetCommand    = "O"
 
