--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -392,11 +392,12 @@ enable2ndByteCanID = false
 
    pageButtons  = "&EGO"
    gauge1       = tachometer	
+   gauge2       = AFRactual
 
 
 [VeAnalyze]
         ;    tableName,  lambdaTargetTableName, lambdaChannel, egoCorrectionChannel, activeCondition
-;        veAnalyzeMap = veTable1Tbl, afrTSCustom, afr1, egocor1, 1
+       veAnalyzeMap = veTableTbl, afrTableTbl, AFRactual, egoCorrection , { 1 }
  ;lambdaTargetTables = afrTable1Tbl, afrTable2Tbl, afrTSCustom
 
 [OutputChannels]
@@ -457,8 +458,9 @@ fileVersion = { 20141225 }
       ind_map_error   = bits,    U32,     80, [2:2], "true", "false";
       ind_iat_error   = bits,    U32,     80, [3:3], "true", "false";
       firmwareTsVersion = scalar,U32,     84, "version",           1,         0
-      egt0             = scalar, S16,     88, "°C",           1,         0
-      egt1             = scalar, S16,     90, "°C",           1,         0      
+      egt0            = scalar,  S16,     88, "°C",           1,         0
+      egt1            = scalar,  S16,     90, "°C",           1,         0
+      egoCorrection   = { 1 }     
       time            = { timeNow }
       engineLoad      = { fuelAlgorithm == 0 ? MAF : TPS }
 
