--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -452,6 +452,7 @@ fileVersion = { 20141225 }
       ind_check_engine= bits,    U32,     72, [8:8], "true", "false";
       ind_need_burn   = bits,    U32,     72, [9:9], "true", "false";
       ind_2nd_trigger_en=bits,   U32,     72, [10:10], "true", "false";
+      vehicleSpeedKph = scalar,  F32,     76,        "kph",   1,       0.0;
       
       ind_tps_error   = bits,    U32,     80, [0:0], "true", "false";
       ind_clt_error   = bits,    U32,     80, [1:1], "true", "false";
@@ -594,6 +595,7 @@ fileVersion = { 20141225 }
 ;   accelEnrichGauge  = accDecEnrich,  "Accel Enrich",       "%",      50,   150,     -1,    -1,  999,  999, 0, 0
    dwellGauge        = sparkDwell,         "Dwell",              "mSec",    0,    10,   0.5,    1.0,  6.0,  8.0, 1, 1
    egt0Gauge         = egt0, "EGT#0", "C", 0, 2000
+   vssGauge          = vehicleSpeedKph,  "Speed",         "kmh",        0,      200,       0,      1,       3,     4,   1,   1
 
 [FrontPage]
    ; Gauges are numbered left to right, top to bottom.
@@ -650,6 +652,7 @@ fileVersion = { 20141225 }
    entry = pulseWidth,      "injPulse",    float,  "%.3f"
    entry = baseFuel,	    "baseFuel",	   float,  "%.2f"
    entry = ign_adv,	    	"ignAdv",	   float,  "%.2f"
+   entry = vehicleSpeedKph,	"speed",	   float,  "%.2f"
    
 ;     tpsADC          = U16,    "ADC",
 ;     alignmet        = U16,    "al",
