base fuel gauge & refactoring & 'enable can' & tiny fix & better defaults

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -438,6 +438,7 @@ fileVersion = { 20141225 }
       tCharge         = scalar,  F32,     52,              "T",             1,       0.0;
       ign_adv         = scalar,  F32,     56,              "deg",           1,       0.0;
       sparkDwell      = scalar,  F32,     60,              "MAP",           1,       0.0;
+      ; actual total Ms time per engine cycle with all corrections
       pulseWidth      = scalar,  F32,     64,              "ms",           1,       0.0;
       warmUpEnrich    = scalar,  F32,     68,              "%",           1,       0.0;
       
@@ -589,6 +590,7 @@ fileVersion = { 20141225 }
    atmPresCGauge     = atmPres,        "atmo pressu",       "kPa",        0,      1024,      0,      0,     0,     0,   0,   0	
    mapCGauge         = MAP,                    "MAP",       "kPa",        0,      1024,      0,      0,     0,     0,   0,   0	
    pulseWidthGauge   = pulseWidth,     "Pulse Width",      "mSec",    0,  25.5,    1.0,   1.2,   20,   25, 3, 1
+   baseFuelGauge     = baseFuel,       "Base Width",      "mSec",    0,  25.5,    1.0,   1.2,   20,   25, 3, 1
    crankingFuelGauge = crankingFuel,   "crank Width",      "mSec",    0,  25.5,    1.0,   1.2,   20,   25, 3, 1
    ignadvGauge = ign_adv,       "Ignition Advance 1",   "degrees", -100,   100,    -999,     -999,  999,  999, 1, 1
 ;   warmupEnrichGauge = warmupEnrich,  "Warmup Enrichment",  "%",     100,   150,     -1,    -1,  101,  105, 0, 0
